2005-06-12  Daniel Jacobowitz  <dan@codesourcery.com>

	* Makefile.am: Clear RELEASE.
	* Makefile.in: Regenerated.

2005-06-12  Daniel Jacobowitz  <dan@codesourcery.com>

	* Makefile.am: Set RELEASE.
	* configure.in: Bump version to 2.16.1.
	* Makefile.in, configure: Regenerated.

2005-06-06  Alan Modra  <amodra@bigpond.net.au>

	* elf64-pcc.c (ppc64_elf_gc_mark_hook): For the local sym in .opd
	case, include addend when indexing .opd section map.
	(ppc64_elf_edit_opd): Add no_opd_opt param.  Do nothing besides
	clear opd_adjust array if no_opd_opt set.  Tidy code.
	Ignore zero size .opd.  Check bfd_alloc return value.
	(ppc_stub_name): Return immediately on bfd_malloc fail.
	* elf64-ppc.h (ppc64_elf_edit_opd): Update prototype.

2005-06-03  Alan Modra  <amodra@bigpond.net.au>

	PR 568
	* elf32-i386.c (elf_i386_relocate_section): Handle zero symndx
	for all reloc types.

	Apply from mainline:
	2005-05-12  H.J. Lu  <hongjiu.lu@intel.com>
	* elf32-i386.c (elf_i386_relocate_section): Allow R_386_GOTOFF
	against protected function when building executable.

2005-06-03  Alan Modra  <amodra@bigpond.net.au>

	* elf64-ppc.c (add_symbol_adjust): Set sym visibility to most
	restrictive of func code and func descr for undefined syms as well
	as defined.

2005-05-29  Daniel Jacobowitz  <dan@codesourcery.com>

	Backport from mainline:
	2005-05-29  Jakub Jelinek  <jakub@redhat.com>
	* elfcode.h (elf_object_p): Fail if e_shoff != 0, e_shnum == 0 and
	first shdr has sh_size == 0.  Fail if e_shnum is large to cause
	arithmetic overflow when allocating the i_shdr array.
	Sanity check sh_link and sh_info fields.  Fix e_shstrndx sanity check.

	2005-05-18  H.J. Lu  <hongjiu.lu@intel.com>
	* elf.c (group_signature): Undo the last change. Check if the
	symbol table section is correct.

	2005-05-17  Nick Clifton  <nickc@redhat.com>
	* elf.c (group_signature): Check for a group section which is
	actually a (corrupt) symbol table section in disguise and prevent